2002-09-13  Darin Adler  <darin@apple.com>

	Here's the *real* mistake that killed plugins. I accidentally
	stopped creating objects at all! Duh. Fixed now.

        * kwq/KWQKHTMLPartImpl.mm: (KWQKHTMLPartImpl::createPart):
	Make a part for a plugin if we need one. Not a KHTMLPart, but
	a KWQPluginPart.

2002-09-13  Darin Adler  <darin@apple.com>

        * kwq/KWQKHTMLPartImpl.mm: (KWQKHTMLPartImpl::createPart):
	Fix plugin-related crashes by making sure each part has a unique
	frame name. There may be something fundamentally wrong with how this
	is working now.

2002-09-13  Richard Williamson (Home)  <rjw@apple.com>

        Made justified text work correctly in khtml for rendering
        and selection.  Optimized selection point calculation by
        only doing characters measurements once.
        
        * khtml/rendering/font.cpp:
        (Font::floatCharacterWidths):
        * khtml/rendering/font.h:
        * khtml/rendering/render_text.cpp:
        (TextSlave::checkSelectionPoint):
        (RenderText::position):
        * kwq/KWQFontMetrics.mm:
        (QFontMetrics::width):
        (QFontMetrics::floatWidth):
        (QFontMetrics::floatCharacterWidths):
        * kwq/KWQPainter.mm:
        (QPainter::drawText):
        * kwq/WebCoreTextRenderer.h:
        * kwq/qt/qfontmetrics.h:

2002-09-13  Darin Adler  <darin@apple.com>

	Quiet error messages related to the slot/signal changes.

        * khtml/khtml_part.cpp:
        (KHTMLPart::startAutoScroll): Ifdef this out.
        (KHTMLPart::stopAutoScroll): Ditto.

        * kwq/KWQObject.mm:
        (QObject::connect): Add two more expected members to the list for
	setStatusBarText and slotViewCleared.

        * kwq/KWQSignal.h: Allow 4 slots per signal.
	I don't want to make it a variable number, but we can if we have to.
        * kwq/KWQSignal.mm:
        (KWQSignal::connect): Support multiple slots.
        (KWQSignal::disconnect): Support multiple slots.